# rust-signaling-server

./: Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
examples/webrtc-chat/: index.html  index.js  main.rs
src/: error.rs  logger.rs  main.rs  name_generator.rs  server.rs  signal.rs  signal_router.rs  signal_socket.rs  websocket.rs
src/server/: error.rs  user.rs
src/signal/: deserialize.rs  serialize.rs
