[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
actix-files = "0.6.2"

[dependencies]
futures = "0.3.1"
actix-web = "4.3.0"
actix = "0.13.0"
actix-web-actors = "4.2.0"
serde_json = "1.0.93"
serde = {varsion = "1.0.152", features = ["derive"]}
actix-rt = "2.8.0"
uuid = {version ="1.3.0", features = ["v4"]}
derive_more = "0.99.17"


