[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

[dependencies]
axum = {version = "0.6.11", features = ["ws"]}
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
serde = {varsion = "1.0.152", features = ["derive"]}
tower = {version = "0.4.13", features = ["util"]}
futures = "0.3.27"
uuid = {version ="1.3.0", features = ["v4"]}
chrono = "0.4.24"




